--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 <section class="works">
   <div class="project">
     <div class="img-container">
-      <img src="images/W FRONT.png">
+      <img src="W FRONT.png">
       <span class="price">P 549</span>
     </div>
   </div>
   <div class="project">
     <div class="img-container">
-      <img src="images/W BACK.png">
+      <img src="W BACK.png">
       <span class="price">P 549</span>
     </div>
   </div>
   <div class="project">
     <div class="img-container">
-      <img src="images/STORY 1.png">
+      <img src="STORY 1.png">
       <span class="price"></span>
     </div>
   </div>
@@ -53,4 +53,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html> 
